--- a/config/database.yml
+++ b/config/database.yml
@@ -29,15 +29,17 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: univ_app
+  username: postgres
 
   # The password associated with the postgres role (username).
-  #password:
+  password: key1337
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  #host: localhost
+
+  # Source: https://stackoverflow.com/questions/32186349/rails-console-no-password-supply-error
+  host: ''
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
